<resources>
    <string name="app_name">大熊作业</string>
    <string name="search_hint"></string>
    <string name="version_format_str">V%s</string>
    <string name="text_ok">确定</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载. . .</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="goip_120_text">192.168.1.100:7001</string>
    <string name="pyip_120_text">192.168.1.100:6000</string>
    <string name="goip_172_text">192.168.1.100:7001</string>
    <string name="pyip_172_text">192.168.1.100:6000</string>
    <string name="shang">172.16.1.15:10000</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="masters_course">微课辅导</string>
    <string name="course_details">课程详情</string>
    <string name="buy_course">购买课程</string>
    <string name="add_handout_view_text">在关键步骤旁的空白位置，点击，添加追问</string>
    <string name="tec_course_tag_text">新时代的省心辅导模式</string>
    <string name="add_course_title_text">添加课程</string>
    <string name="purchase_student_title_text">已购学生</string>
    <string name="upload_class_text">上传课时</string>
    <string name="edit_class_text">编辑课时</string>
    <string name="class_catalog_title_text">课时目录</string>
    <string name="save_text">"保存"</string>
    <string name="submit_text">"提交"</string>
    <string name="knowledge_query">知识点</string>
    <string name="add_handout_view_text1">温馨提示：</string>
    <string name="add_handout_view_text2">请在讲义旁边随意点击，可添加语音或文字</string>
    <string name="done_this_page_text">完成本页</string>
    <string name="click_to_record_text">请点击开始录音</string>
    <string name="recording_text">录音中...</string>
    <string name="click_to_stop_text">点击停止录音</string>
    <string name="saving_record_text">保存录音中...</string>
    <string name="homework_check_common_credit_text">信用：%s</string>
    <string name="homework_check_title_text">作业检查</string>
    <string name="homework_detail_title_text">作业详情</string>
    <string name="single_homework_title_text">单题批注</string>
    <string name="homework_check_ask_time_text">2分钟前</string>
    <string name="homework_check_answer_time_text">完成时间：s%</string>
    <string name="submit_homework_check_text">提交作业检查</string>
    <string name="goto_this_homework_check_text">进入作业检查</string>
    <string name="time_limit_homework_check_text1">作业检查限时</string>
    <string name="time_limit_homework_check_text2">分钟，还剩</string>
    <string name="time_limit_homework_check_text3">分钟</string>
    <string name="homewrok_hall_title_text">作业大厅</string>
    <string name="my_homework_title_text">我的作业检查</string>
    <string name="my_checkhomework_title_text">我检查的作业</string>
    <string name="fabu_homewrok_btn_text">发布作业</string>
    <string name="answer_quality_text">详细程度%s星</string>
    <string name="answer_time_text">%s分钟解决</string>
    <string name="desc_homework_text">请老师详细给出解题过程哦~~</string>
    <string name="change_homework_text">诚信抢答，抢到后放弃作答将被扣除1个信用</string>
    <string name="detail_homework_desc_text">请在单题位置点击，评估答案是否正确</string>
    <string name="detail_homework_desc2_text">请评估此题答案</string>
    <string name="ask_num_text">作业检查次数：%s</string>
    <string name="answer_num_text">检查作业次数：%s</string>
    <string name="help_info_text1">1：答案正确，可以描述本题知识点或者表扬鼓励学生。答案错误，请拍照上传纸面解题过程</string>
    <string name="help_info_text2">2：此页面专属本题，你可以随意位置打点讲解本题</string>
    <string name="help_info_text3">3：长按某个注释，即可删除</string>
    <string name="help_info_text_wrong1">1：你可以在关键步骤点击讲解本题</string>
    <string name="help_info_text_wrong2">2：长按某个注释，即可删除</string>
    <string name="check_point_view_text1">请在关键步骤点击</string>
    <string name="check_point_view_text2">添加语音/文字讲解</string>
    <string name="collect_homework_text">收藏</string>
    <string name="collect_homework_text_quxiao">取消收藏</string>
    <string name="please_evaluate_tec_lessons">请评价老师此次的讲解</string>
    <string name="please_add_comment">填写评论</string>
    <string name="go_back_text">返回</string>
    <string name="apply_arbitration_text">申请仲裁</string>
    <string name="giveup_arbitration_text">放弃仲裁</string>
    <string name="study_analysis_text">分析</string>
    <string name="this_analysis_text">本次分析</string>
    <string name="month_analysis_title_text">月度学情分析</string>
    <string name="month_analysis_text">月度分析</string>
    <string name="s_type_wrong_text">S型（技巧型）错题</string>
    <string name="s_type_wrong_num_text">S型错题合计：</string>
    <string name="k_type_wrong_text">K型（知识点型）错题</string>
    <string name="k_type_wrong_num_text">K型错题合计：</string>
    <string name="look_homework_text">查看作业</string>
    <string name="userid_text">学号：%d</string>
    <string name="grabred_times_text">还剩%d次机会</string>
    <string name="share_title">大熊作业-学情分析</string>
    <string name="share_desc">作业辅导不犯愁，让孩子成绩好起来！</string>
    <string name="tips_grabred_text">学点已经自动存入您的账户</string>
    <string name="search_timu_text_hint">请输入题目ID/考点关键字搜索</string>
    <string name="search_timu_text">按考题ID/考点关键字搜索：</string>
    <string name="search_timu_text2">按考点条件搜索：</string>
    <string name="grade_text1">初一</string>
    <string name="grade_text2">初二</string>
    <string name="grade_text3">初三</string>
    <string name="grade_text4">高一</string>
    <string name="grade_text5">高二</string>
    <string name="grade_text6">高三</string>
    <string name="text_ask_des">麻烦老师解答下，谢谢老师。(24个字之内)</string>
    <string name="choice_fudao_text">选择辅导机构</string>
    <string name="choice_publisher">选择发题者</string>
    <string name="text_qa_hall">问答广场</string>
    <string name="text_qa_hall_tag1">火热问答，累计答疑</string>
    <string name="text_qa_hall_tag3">道</string>
    <string name="text_pay_answer">悬赏问答</string>
    <string name="text_ask_title">难题答疑</string>
    <string name="text_question_submit">发布问题</string>
    <string name="text_question_submiting">正在发布问题,请稍候</string>
    <string name="text_pay_answer_price">悬赏价格</string>
    <string name="text_pay_answer_price_tips">*1个学点等于1块钱，价格太低可能导致答题较慢！</string>
    <string name="text_pay_answer_alert">一次问一题，拍整张试卷的将被直接删除！</string>
    <string name="text_pay_answer_alert_tips">*温馨提示：一次问一题，拍整张试卷的将被直接删除！</string>
    <string name="text_pay_answer_alert_tips_subject">*温馨提示：选错科目可能会被举报，被举报会被直接删除</string>
    <string name="text_grade_subject_choice">选择擅长科目(可多选)</string>
    <string name="text_campus_scenery">校园风光</string>
    <string name="text_campus_scenery_tip">征集校园风采照</string>
    <string name="text_my_qpad">我的问答</string>
    <string name="text_my_qpad_stu">我的提问</string>
    <string name="text_my_qpad_tea">我的回答</string>
    <string name="text_excellent_selction">历年考题</string>
    <string name="text_gold_selction">我的学点</string>
    <string name="text_current_gold">当前余额</string>
    <string name="text_pay_asnwer_reward">酬金: </string>
    <string name="text_login">登录</string>
    <string name="text_login_by_qq">QQ直接登录</string>
    <string name="text_login_by_qq_1">QQ登录</string>
    <string name="text_login_by_phone">手机登录</string>
    <string name="text_login_regist_by_phone">手机号/学号登录</string>
    <string name="text_login_tips_title">*温馨提示：</string>
    <string name="text_login_tips_content1">大学生请登录</string>
    <string name="text_login_tips_content2">huoyanzuoye.com</string>
    <string name="text_login_tips_content3">进行认证后，方可登录使用。</string>
    <string name="text_pay_gold">充值</string>
    <string name="text_friend_gold">邀请好友</string>
    <string name="text_dayday_signin">天天签到</string>
    <string name="text_report">请选择举报类型</string>
    <string name="text_report_desc">如果举报正确，奖励一个学点，反之扣除一个学点一个信用</string>
    <string name="text_report_success">举报成功</string>
    <string name="text_report_title">举报</string>
    <string name="text_unlogin">用户没有登录！</string>
    <string name="grade_choice_text">年级选择：</string>
    <string name="subject_choice_text">科目选择：</string>
    <string name="chapter_choice_text">章节选择：</string>
    <string name="kpoint_choice_text">知识点选择：</string>
    <string name="search_timu_btn_text">查找考题</string>
    <string name="all_text">全部</string>
    <string name="text_report_reason1">图片与提问无关</string>
    <string name="text_report_reason2">图片看不清或不完整</string>
    <string name="text_report_reason3">一次提问超过一题</string>
    <string name="text_report_reason4">年级与科目设置有误</string>
    <string name="text_excellent_selction_tip_student">名校大学生讲解，思路胜过任何教辅</string>
    <string name="text_excellent_selction_tip_teacher">一题多讲，最好的家教备课助手</string>
    <string name="text_pay_answer_tip_teacher">赚快钱，50个学点可提现</string>
    <string name="text_dayday_signin_tip">连续签到可领更多学点</string>
    <string name="text_pay_answer_tip_student">15分钟解决难题，追问不限次</string>
    <string name="text_gold_not_less">签到分享领学点，当前可用学点</string>
    <string name="text_my_qpad_tip_student">我的学习记录和同学们关心的问题</string>
    <string name="text_my_qpad_tip_teacher">向学生和家长证明你的辅导能力</string>
    <string name="text_pay_answer_grab_tip">诚信抢题，抢到题目后如放弃，将扣除一个信用。</string>
    <string name="text_question_description">请给出详细的解答过程哦~</string>
    <string name="text_grab_title">抢题</string>
    <string name="text_grab_answer_submit_area">答案提交区</string>
    <string name="text_grab_item_submit">提交答案</string>
    <string name="text_camera_popupwindow_photo">拍照</string>
    <string name="text_camera_popupwindow_alnum">从相册中获取</string>
    <string name="text_resend_popupwindow_resend">重发</string>
    <string name="text_camera_popupwindow_cancel">取消</string>
    <string name="text_album">相册</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_nav_submit">确定</string>
    <string name="text_nav_cancel">取消</string>
    <string name="text_photo_view_tip">在每个关键步骤空白位置, 长按,添加语音/文字讲解</string>
    <string name="text_toast_have_not_enough">sdcard没有多余的空间，请清除部分文件后再试</string>
    <string name="text_btn_cancel">取消</string>
    <string name="about1">"         大熊作业是第一款为家长开发的家庭作业辅导应用。旨在为家长提供一个标准化的家庭作业辅导工具，极大降低家长辅导作业的难度，极大提升辅导效率。"</string>
    <string name="about2">"		  有了大熊作业，家长只需要把整页作业拍上去就好。拍完后15分钟内，专业老师会在线对每道题都检查，每个错题都详细讲解，每周有专属学管师根据作业情况向家长反馈学习问题以及改进建议，让家长心中有数。"</string>
    <string name="about3">"		  大熊作业就是家长的作业检查助手，学生的作业辅导朋友。"</string>
    <string name="invite_wechat_friends">微信好友</string>
    <string name="invite_qq_friends">QQ好友</string>
    <string name="invite_circle_of_friends">朋友圈</string>
    <string name="invite_q_zone">QQ空间</string>
    <string name="contact_us">联系我们</string>
    <string name="official_email"> 官方邮箱:</string>
    <string name="official_email_value">huoyan@welearn.com</string>
    <string name="office_tel">客服电话：</string>
    <string name="office_tel_value">400-6755-222</string>
    <string name="office_qq">客服QQ:</string>
    <string name="office_qq_value">1217932313</string>
    <string name="office_chat">家长交流群:</string>
    <string name="text_get_verification_code">获取验证码</string>
    <string name="text_binding_info">绑定手机</string>
    <string name="text_binding_skip">跳过></string>
    <string name="master_course_tv_des1">进入 “</string>
    <string name="master_course_tv_des2">发现课程</string>
    <string name="master_course_tv_des3">”</string>
    <string name="master_course_tv_des4">找到合适你的名师课程！</string>
    <string name="dialog_buy_course_title">确认购买该课程？</string>
    <string name="dialog_buy_course_ok">确认</string>
    <string name="dialog_buy_course_cancel">取消</string>
    <string name="text_input_phone_num">输入手机号码</string>
    <string name="text_password_hint">6-20位密码,建议数字、字母组合</string>
    <string name="register_verification_code">验证码</string>
    <string name="text_regist_confirm">注册</string>
    <string name="office_chat_value">512213586</string>
    <string name="two_dimensional_code_download">QQ扫描分享赢学点</string>
    <string name="picker_sure">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_title">选择时间</string>
</resources>