<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_background_color"
    android:orientation="vertical" >

    <include layout="@layout/welearn_header_view" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:orientation="vertical" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/about1"
                android:textColor="#828282"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="5dp"
                android:text="@string/about2"
                android:textColor="#828282"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="5dp"
                android:text="@string/about3"
                android:textColor="#828282"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:textColor="#828282"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="30dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/official_email"
                            android:textColor="#828282"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="email"
                            android:text="@string/official_email_value"
                            android:textColor="#828282"
                            android:textSize="12sp"
                            android:layout_marginLeft="5dp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="30dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/office_tel"
                            android:textColor="#828282"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="none"
                            android:text="@string/office_tel_value"
                            android:textColor="#828282"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="30dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/office_qq"
                            android:textColor="#828282"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="none"
                            android:text="@string/office_qq_value"
                            android:textColor="#828282"
                            android:textSize="12sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="30dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/office_chat"
                            android:textColor="#828282"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="none"
                            android:text="@string/office_chat_value"
                            android:textColor="#828282"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="111dp"
                    android:layout_height="1dp"
                    android:layout_weight="111" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="14dp"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/tips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/two_dimensional_code_download"
                        android:textColor="#9e9e9e"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/qr_imageview"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_below="@+id/tips"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_erweima" />
                </RelativeLayout>
            </LinearLayout>





        </LinearLayout>
    </ScrollView>

</LinearLayout>