<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/welearn_header_view" />

    <RelativeLayout
        android:id="@+id/binding_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="20dp"
        android:visibility="visible" >

        <TextView
            android:id="@+id/binding_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/text_binding_info"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/skip_binding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/text_binding_skip"
            android:textColor="@color/welearn_blue"
            android:textSize="14sp" 
            android:visibility="gone"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="20dp" >

        <EditText
            android:id="@+id/phone_num_et_phone_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@drawable/ic_phone_drawbleleft"
            android:drawablePadding="15dp"
            android:hint="@string/text_input_phone_num"
            android:inputType="number"
            android:maxLength="14"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="#9e9e9e"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/delete_phone_iv"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_alignRight="@+id/phone_num_et_phone_register"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/bt_delete"
            android:visibility="visible" />
    </RelativeLayout>

    <EditText
        android:id="@+id/phone_psw_et_phone_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/bg_edittext"
        android:drawableLeft="@drawable/ic_phone_password_drawbleleft"
        android:drawablePadding="15dp"
        android:hint="@string/text_password_hint"
        android:inputType="textPassword"
        android:maxLength="15"
        android:padding="6dp"
        android:singleLine="true"
        android:textColor="#9e9e9e"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="25dp" >

        <EditText
            android:id="@+id/ver_code_et_phone_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="111"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@drawable/ic_phone_sms_drawbleleft"
            android:drawablePadding="15dp"
            android:hint="@string/register_verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="#9e9e9e"
            android:textSize="14sp" />

        <Button
            android:id="@+id/get_verificationcode_btn_phone_register"
            android:layout_width="121dp"
            android:layout_height="30dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/bg_get_verification_btn_selector"
            android:text="@string/text_get_verification_code"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_reg_btn_phone_register"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_qq_login_btn_selector"
        android:text="@string/text_regist_confirm"
        android:textColor="#ffffff"
        android:textSize="14sp" />

</LinearLayout>