<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/master_course_iv_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8.5dp"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/master_course_iv_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp">

        <TextView
            android:id="@+id/master_course_tv_des1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_course_tv_des1"
            android:textColor="#000000"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/master_course_tv_des2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/master_course_tv_des1"
            android:text="@string/master_course_tv_des2"
            android:textColor="#ff5b00"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/master_course_tv_des3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/master_course_tv_des2"
            android:text="@string/master_course_tv_des3"
            android:textColor="#000000"
            android:textSize="19sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/master_course_tv_des4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/master_course_tv_des4"
        android:textColor="#000000"
        android:textSize="19sp" />

</RelativeLayout>