<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pop_list_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/share_to_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:text="分享到"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_to_tv"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_share_wechat"
                style="@style/welearn_share_Button_Style"
                android:drawableTop="@drawable/bg_share_btn_wechat"
                android:text="@string/invite_wechat_friends" />

            <Button
                android:id="@+id/btn_share_qq"
                style="@style/welearn_share_Button_Style"
                android:drawableTop="@drawable/bg_share_btn_qq"
                android:text="@string/invite_qq_friends" />

            <Button
                android:id="@+id/btn_share_wechat_cof"
                style="@style/welearn_share_Button_Style"
                android:drawableTop="@drawable/bg_share_btn_wechat_cof"
                android:text="@string/invite_circle_of_friends" />

            <Button
                android:id="@+id/btn_share_qzone"
                style="@style/welearn_share_Button_Style"
                android:drawableTop="@drawable/bg_share_btn_qzone"
                android:text="@string/invite_q_zone" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/bg_pop_window_cancel_btn_selector"
            android:minHeight="40dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/text_btn_cancel"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>