<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="317dp"
        android:layout_height="192dp"
        android:layout_centerInParent="true"
        android:background="@drawable/pop_up_bg" >

        <TextView
            android:id="@+id/dialog_buy_course_tilte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="68dp"
            android:text="@string/dialog_buy_course_title"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="11.5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_buy_course_bt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pop_up_btn_selector"
                android:text="@string/dialog_buy_course_ok"
                android:textColor="@color/pop_up_btn_color_selector"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dialog_buy_course_bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43.5dp"
                android:background="@drawable/pop_up_btn_selector"
                android:text="@string/dialog_buy_course_cancel"
                android:textColor="@color/pop_up_btn_color_selector"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>